--- a/src/common/paper_tab.css
+++ b/src/common/paper_tab.css
@@ -1,7 +1,5 @@
 /* Align view icon */
 .tab-content {
-	display: inline-flex;
-	justify-content: space-evenly;
 	width: 100%;
 	position: relative;
 	top: 11px;
