--- a/src/common/root.css
+++ b/src/common/root.css
@@ -36,13 +36,11 @@ div,
 				max-width: 64px;
 				color: var(--primary-color);
 				background-color: var(--accent-color);
-				border-radius: 16px;
 			}
 
 			> paper-tab {
 				/* Display view tab contents vertically and set minimum size */
 				padding: 0;
-				display: inline-flex;
 				flex-direction: column;
 				flex: 1;
 				min-width: min(
@@ -54,10 +52,12 @@ div,
 				> ha-icon {
 					width: 24px;
 					height: 32px;
+					border-radius: 16px;
 					display: inline-flex;
 					justify-content: center;
 					align-items: center;
 					transition: width 0.2s cubic-bezier(0.2, 0, 0, 1);
+					will-change: width, color, background-color;
 				}
 
 				/* Prevent edit mode icon from shrinking on small width displays */
@@ -70,11 +70,12 @@ div,
 			> paper-tab::after {
 				content: attr(aria-label);
 				text-transform: none;
+				text-wrap: wrap;
+				text-align: center;
 				font-weight: 500;
 				font-size: min(3vw, 13px);
 				opacity: 0.8;
 				padding: 0px 1px;
-				text-wrap: wrap;
 				overflow: hidden;
 				line-height: 14px;
 				height: 100%;
@@ -101,31 +102,33 @@ div,
 		padding-left: 12px !important;
 		padding-right: 12px !important;
 	}
+}
 
-	/* Fix view box when in edit mode */
-	> .edit-mode > #view {
+.edit-mode {
+	> .header {
+		/* Fix edit mode header height */
+		height: calc(2 * var(--footer-height)) !important;
+
+		/* Fix edit mode toolbar height */
+		> paper-tabs {
+			height: 50%;
+
+			> paper-tab {
+				/* Make edit mode current view tab fit all buttons */
+				min-width: fit-content !important;
+
+				/* Remove extra left padding from edit view buttons */
+				> .edit-icon {
+					padding-left: 0 !important;
+				}
+			}
+		}
+	}
+
+	> #view {
+		/* Fix view box when in edit mode */
 		padding-top: calc(2 * var(--footer-height)) !important;
 		padding-bottom: 0 !important;
 		bottom: calc(2 * var(--footer-height)) !important;
-	}
-}
-
-.edit-mode > .header {
-	/* Fix edit mode header height */
-	height: calc(2 * var(--footer-height)) !important;
-
-	/* Fix edit mode toolbar height */
-	> paper-tabs {
-		height: 50%;
-
-		> paper-tab {
-			/* Make edit mode current view tab fit all buttons */
-			min-width: fit-content !important;
-
-			/* Remove extra left padding from edit view buttons */
-			> .edit-icon {
-				padding-left: 0 !important;
-			}
-		}
 	}
 }
